<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:contentDescription="@string/activity_main_logo"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="63dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activity_main_bienvenido"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:text="@string/activity_main_aviso_medico"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/activity_main_btn_continuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:text="@string/activity_main_continuar"
            android:textColor="?attr/colorPrimary"/>

    </LinearLayout>
</LinearLayout>
