<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.navigationdrawer.ComprobarManchaFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.alex.navigationdrawer.ComprobarManchaFragment"
        tools:layout_editor_absoluteY="81dp">

        <Button
            android:id="@+id/btn_hacerfoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/comprobar_mancha_hacer_foto"
            app:layout_constraintBottom_toBottomOf="@+id/btn_repetirfoto"
            app:layout_constraintEnd_toStartOf="@+id/btn_enviarfoto"
            app:layout_constraintStart_toEndOf="@+id/btn_repetirfoto"
            app:layout_constraintTop_toTopOf="@+id/btn_repetirfoto"/>

        <ImageView
            android:id="@+id/img_foto_tomada"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent"/>

        <Button
            android:id="@+id/btn_repetirfoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/comprobar_mancha_repetir_foto"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_hacerfoto"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_enviarfoto"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/comprobar_mancha_enviar_foto"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_hacerfoto"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
